--- a/views/index.jade
+++ b/views/index.jade
@@ -2,11 +2,7 @@ extends html
 
 block content
     .container
-        p.question Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien scelerisque, mollis justo at, cursus ante.
-
-    hr
-
-    .container
-        .text-center
-            .chosen
-                span
+        .panel.panel-default
+            .panel-body
+                a.btn.btn-default(href="/selection") Selection
+                a.btn.btn-default(href="/replacement") Replacement
