Updated less stylesheet

--- a/assets/less/index.less
+++ b/assets/less/index.less
@@ -2,6 +2,8 @@ body {
     padding-top: 50px;
 
     p.question {
+        font-family: monospace;
+
         overflow: hidden;
 
         > span {
@@ -23,6 +25,10 @@ body {
                 margin: 10px 5px;
             }
         }
+    }
+
+    p.answer {
+        font-family: monospace;
     }
 
     .chosen {
