--- a/assets/less/index.less
+++ b/assets/less/index.less
@@ -13,6 +13,12 @@ body {
                 background-color: blue;
             }
 
+            &.punc {
+                &:hover {
+                    background-color: white;
+                }
+            }
+
             &.selected {
                 background-color: green;
             }
