--- a/assets/less/index.less
+++ b/assets/less/index.less
@@ -1,6 +1,10 @@
 body {
     padding-top: 50px;
 
+    h1.title {
+        font-size: 48px;
+    }
+
     p.question {
         overflow: hidden;
 
@@ -9,18 +13,30 @@ body {
 
             margin: 10px 0;
 
-            &:hover {
-                background-color: blue;
+            &.hover {
+                color: #fff;
+                background-color: #5bc0de;
+                border-color: #46b8da;
             }
 
             &.punc {
-                &:hover {
-                    background-color: white;
+                &.hover {
+                    background-color: #fff;
+                    border: none;
+                    color: #000;
                 }
             }
 
             &.selected {
-                background-color: green;
+                color: #fff;
+                background-color: #5cb85c;
+                border-color: #4cae4c;
+
+                &:hover {
+                    color: #fff;
+                    background-color: #f0ad4e;
+                    border-color: #eea236;
+                }
             }
 
             > span {
@@ -32,6 +48,17 @@ body {
     }
 
     p.answer {
+        > span {
+            display: inline-block;
+
+            margin: 10px 0;
+
+            > span {
+                display: inline-block;
+
+                margin: 10px 5px;
+            }
+        }
     }
 
     .chosen {
