--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,16 @@ html
         script(type="text/javascript", src="js/coffee-script.js")
     body
         script(type="text/coffeescript", src="coffee/index.coffee")
+
+        .container
+            .jumbotron
+                h1.title Paragraph Word Replacement
+                p
+                    ol
+                        li Selections are subsequential.
+                        li Punctuations acts as a stop.
+                        li Reconstructed input width is based on total selected characters.
+
         .container
             p.question Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien scelerisque, mollis justo at, cursus ante.
 
