--- a/views/index.jade
+++ b/views/index.jade
@@ -22,9 +22,21 @@ html
                         li Reconstructed input width is based on total selected characters.
 
         .container
-            p.question Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien scelerisque, mollis justo at, cursus ante.
+            .panel.panel-primary
+                .panel-heading
+                    h2 Mechanics
+                .panel-body
+                    div
+                        p.question Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec sapien scelerisque, mollis justo at, cursus ante.
 
-        hr
+                    hr
+
+                    div
+                        p.answer
 
         .container
-            p.answer
+            .panel.panel-default
+                .panel-heading
+                    h2 API
+                .panel-body
+                    p To be updated
