--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title= title
+        title Paragraph Word Replacement
         link(rel="stylesheet", href="css/bootstrap.min.css")
         script(type="text/javascript", src="js/jquery.min.js")
 
