--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,9 @@ html
         link(rel="stylesheet", href="css/bootstrap.min.css")
         script(type="text/javascript", src="js/jquery.min.js")
 
+        link(rel="stylesheet", href="css/feedback.css")
+        script(type="text/javascript", src="js/feedback.js")
+
         link(rel="stylesheet/less", type="text/css", href="less/index.less")
 
         script(type="text/javascript", src="js/less.min.js")
@@ -21,7 +24,6 @@ html
                         li Punctuations acts as a stop.
                         li Reconstructed input width is based on total selected characters.
 
-        .container
             .panel.panel-primary
                 .panel-heading
                     h2 Mechanics
@@ -34,9 +36,13 @@ html
                     div
                         p.answer
 
-        .container
             .panel.panel-default
                 .panel-heading
                     h2 API
                 .panel-body
                     p To be updated
+
+            .panel.panel-warning
+                .panel-heading
+                    h2 To Do
+                .panel-body#feedback(data-identifier="paragraph-word-replacement")
